--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
